# athena-cloud-water

./: .gitignore  LICENSE  README.md  meta_loop_9.py  node.yaml  pyproject.toml  run_corpus_dual_training.py  run_dual_pole_sacred_loop3.py  run_full_training.py  run_meta_loop_cubed.py  run_n3_alchemy.py  run_observed_meta_loop.py  run_svg_self_play.py  run_svg_transcendence.py
MCP/: athena_mcp_server.py  generate_graph.py  requirements.txt
scripts/: crystallize_manuscript_brain.py  project_hologram.py
self_actualize/: archive_atlas.qshr  athenachka_organism_v0_quest_packets.qshr  deep_integration_neural_net.qshr  four_agent_57_cycle_receipt_index.qshr  helix_recursion_schema.qshr  lp57_omega_agent_progression_registry.qshr  lp57_omega_machine_quest_packets.qshr  lp_57_liminal_coordinate_stamps.qshr  lp_57_master_agent_ledger.qshr  master_loop_57_roadmap.qshr  master_loop_public_quest_bundle_57.qshr  master_loop_shared_lattice_4096.qshr  master_loop_state_57.qshr  myth_math_ap6d_57_loop_control_registry.qshr  myth_math_ap6d_57_loop_nested_seat_manifest.qshr  myth_math_ap6d_57_loop_quest_bundle_registry.qshr  myth_math_ap6d_57_loop_worker_action_registry.qshr  myth_math_command_membrane_event_registry.qshr  myth_math_dense_65_rqt_witness_registry.qshr  myth_math_dense_65_shell_registry.qshr  myth_math_full_corpus_appendix_governance_ledger.qshr  myth_math_full_corpus_basis_crosswalk_registry.qshr  myth_math_hemisphere_atlas.qshr  myth_math_hemisphere_commissure_registry.qshr  myth_math_hemisphere_constellation_edge_registry.qshr  myth_math_hemisphere_hub_registry.qshr  (+52 more)
(+1028 files in other folders)
